virdant/examples/errors/read_from_sink.vir
mod Top {
    outgoing out : Bit;
    out := false;

    wire w : Bit;
    w := out;
}
